[project]
name = "lotm-renting-protocol-v1"
description = "Koda Renting Protocol by Zharta"
classifiers = ["Private :: Do Not Upload"]
version = "0"
dependencies = [
    "eth-ape",
    "vyper==0.4.1",
    "ape-vyper",
    "ape-foundry",
    "ape-alchemy",
    "ape-arbitrum",
    "ape-base",
]


[project.optional-dependencies]
dev = [
    # "titanoboa==0.2.5",
    "titanoboa @ git+https://github.com/vyperlang/titanoboa.git@c06e23a68df73d669738f30faa4aeb051012423b",
    "boto3",
    "click",
    "coverage",
    "hypothesis",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "python-lsp-server",
    "rich",
    "rope",
    "ruff",
]

[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts"]

[tool.pytest.ini_options]
log_file = "pytest-logs.txt"
addopts = """
    -p no:ape_test
    -vv
    --durations=10
"""

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["ANN", "B905", "BLE", "COM812", "CPY", "D", "DTZ", "EM", "FIX", "ISC001", "PLR0913", "PLR2004", "S", "TCH", "TD", "TRY003"]
line-length = 127
lint.preview = true
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/*.py" = [
    "A001",
    "ARG001",
    "ERA001",
    "FBT002",
    "FURB103",
    "T201",
    "PLR6301",
    "PLW1514",
    "PTH123",
    "UP015",
]
"tests/*.py" = [
    "A001",
    "ARG001",
    "C420",
    "ERA001",
    "F401",
    "FURB140",
    "FBT003",
    "N815",
    "PLC1901",
    "PLR6301",
    "PLR0917",
    "PLR091",
    "PLW2901",
    "PT004",
    "PT022",
    "PTH",
    "PYI024",
    "RUF029",
    "RUF052",
    "SLF001",
    "T201",
    "TID252",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
